@@ -1,10 +1,12 @@
 procps-3.2.1 --> procps-3.2.2
 
+now using gcc -fweb and -frename-registers options
 avoid warning about -lncurses when not linking -- thanks FLWM
 ps: personality-specific -x support (HP-UX and SVR4-MP)
 ps: k option, same as --sort
 vmstat: fixed -d
-top: try to handle terminals lacking rmam and smam
+top: try to handle terminals lacking rmam and smam     #235003
+top: tolerate sparse CPU numbering
 
 procps-3.2.0 --> procps-3.2.1
 
